Fix menubar extending offscreen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,7 +105,7 @@
 
 html {
 	overflow: hidden;
-	width: 100%;
+	width: 100svw;
 }
 
 body {
@@ -137,6 +137,6 @@ body {
 
 @media screen and (max-width: 8in) {
 	:root {
-		--sidebar-width: 100vw;
+		--sidebar-width: 100svw;
 	}
 }
